--- a/Dido_Store_2/Areas/Admin/Views/Product/Index.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Product/Index.cshtml
@@ -73,7 +73,7 @@
                         </tbody>
                     </table>
 
-                    @Html.PagedListPager(Model, Page => Url.Action("Index", new { Page }))
+                    @Html.PagedListPager(Model, Page => Url.Action("Index", new { Page, @searchString = ViewBag.searchString }))
                 </div>
 
             </div>
