--- a/Dido_Store_2/Views/Home/Index.cshtml
+++ b/Dido_Store_2/Views/Home/Index.cshtml
@@ -48,11 +48,12 @@
         </div>
         <div class="clear"></div>
     </div>
-    <div class="section group">
+    <div class="section group d-flex justify-content-center">
+        
         @foreach (var item in listNewsProducts)
         {
             var url = "/chi-tiet/" + item.Alias + "-" + item.ID;
-            <div class="grid_1_of_4 images_1_of_4">
+            <div class="grid_1_of_4 images_1_of_4 col-3">
                 <a href="@url"><img src="@item.Image" alt="@item.Name" /></a>
                 <h2>@item.Name</h2>
                 <div class="price-details">
