--- a/Dido_Store_2/Views/Product/ProductBranch.cshtml
+++ b/Dido_Store_2/Views/Product/ProductBranch.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<Model.EF.Product>
 @{
+    /**/
     var branch = (Model.EF.Branch)ViewBag.Branch;
     ViewBag.Title = branch.BranchName;
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -16,7 +17,7 @@
         <div class="clear"></div>
     </div>
     <div class="section group">
-        @foreach (var item in Model)
+        @foreach(var item in Model)
         {
             var url = "/chi-tiet/" + item.Alias + "-" + item.ID;
             <div class="grid_1_of_4 images_1_of_4">
@@ -27,7 +28,7 @@
                         <p><span class="rupees">@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")<u>đ</u></span></p>
                     </div>
                     <div class="add-cart">
-                        <h4><a href="/gio-hang/@item.ID">Add to Cart</a></h4>
+                        <h4><a href="/gio-hang/@item.ID">Thêm vào giỏ</a></h4>
                     </div>
                 </div>
 
@@ -35,7 +36,7 @@
         }
         <div class="clear"></div>
         <!--Phân trang-->
-        @if (ViewBag.TotalPage > 1)
+        @if(ViewBag.TotalPage > 1)
         {
             var pageDisplay = (int)(ViewBag.MaxPage);
             int totalPage = (int)ViewBag.TotalPage;
@@ -45,27 +46,27 @@
             var endPageIndex = Math.Min(totalPage, currentPage + pageDisplay / 2);
             var link = "/san-pham/" + branch.Alias + "-" + branch.ID;
             <nav>
-                <ul class="pagination">
-                    @if (currentPage > ViewBag.First)
+                <ul class="pagination  justify-content-end">
+                    @if(currentPage > ViewBag.First)
                     {
-                        <li><a href="@link?page=@ViewBag.First" title="Trang đầu" class="first"><i class="fa fa-angle-double-left"></i></a></li>
-                        <li><a href="@link?page=@ViewBag.Prev" title="Trang trước" class="prev"><i class="fa fa-angle-left"></i></a></li>
+                        <li class="page-item"><a href="@link?page=@ViewBag.First" title="Trang đầu" >Đầu</a></li>
+                        <li class="page-item"><a href="@link?page=@ViewBag.Prev" title="Trang trước" c><i class="fa fa-angle-left"></i></a></li>
                     }
-                    @for (int i = startPageIndex; i <= endPageIndex; i++)
+                    @for(int i = startPageIndex; i <= endPageIndex; i++)
                     {
-                        if (currentPage == 1)
+                        if(currentPage == i)
                         {
-                            <li><a href="@link?page=@i" class="active" title="Trang @i">@i</a></li>
+                            <li class="page-item active"><a href="@link?page=@i" title="Trang @i">@i</a></li>
                         }
                         else
                         {
-                            <li><a href="@link?page=@i" class="pos" title="Trang @i">@i</a></li>
+                            <li class="page-item"><a href="@link?page=@i"  title="Trang @i">@i</a></li>
                         }
                     }
-                    @if (currentPage < totalPage)
+                    @if(currentPage < totalPage)
                     {
-                        <li><a href="@link?page=@ViewBag.Next" class="next" title="Trang sau"><i class="fa fa-angle-right"></i></a></li>
-                        <li><a href="@link?page=@ViewBag.Last" class="last" title="Trang cuối"><i class="fa fa-angle-double-right"></i></a></li>
+                        <li class="page-item"><a href="@link?page=@ViewBag.Next"  title="Trang sau"><i class="fa fa-angle-right"></i></a></li>
+                        <li class="page-item"><a href="@link?page=@ViewBag.Last"  title="Trang cuối">Cuối</a></li>
                     }
                 </ul>
             </nav>
