--- a/Dido_Store_2/Views/Shared/_Layout.cshtml
+++ b/Dido_Store_2/Views/Shared/_Layout.cshtml
@@ -7,10 +7,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Free Home Shoppe Website Template | Home :: w3layouts</title>
+    <title>Dido</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="/Assets/client/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="~/Assets/client/images/tab-icon.png" rel="icon" type="image/x-icon" />
     <link href="/Assets/client/css/slider.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/Assets/client/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/Assets/client/css/font-awesome.min.css" rel="stylesheet" />
@@ -20,6 +21,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <script type="text/javascript" src="/Assets/client/js/startstop-slider.js"></script>
 </head>
 <body>
+
+    <div id="fb-root"></div>
+    <script>
+    (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.2';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
     <div class="wrap">
         <div class="header">
             <div class="headertop_desc">
@@ -38,7 +50,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
             <div class="header_top">
                 <div class="logo">
-                    <a href="/Home/Index"><img src="~/Assets/client/images/logo.jpg" alt="" /></a>
+                    <a href="/"><img src="~/Assets/client/images/logo.jpg" alt="" /></a>
                 </div>
                 <div class="cart">
                     <p>
@@ -65,7 +77,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             });
                         }
                     }
-
+                    
                     $(function () {
 
                         var dd = new DropDown($('#dd'));
@@ -83,7 +95,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="header_bottom">
                 <div class="menu">
                     <ul>
-                        <li class="active"><a href="index.html">Trang chủ</a></li>
+                        <li class="active"><a href="/">Trang chủ</a></li>
                         <li><a href="gioi-thieu">Giới thiệu</a></li>
                         <li><a href="san-pham">Sản phẩm</a></li>
                         <li><a href="news.html">Tin tức</a></li>
@@ -102,7 +114,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
         <div class="main">
             @RenderBody()
-            
         </div>
     </div>
     <div class="footer">
