--- a/Dido_Store_2/Views/Home/Index.cshtml
+++ b/Dido_Store_2/Views/Home/Index.cshtml
@@ -60,7 +60,7 @@
                         <p><span class="rupees">@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")<u>đ</u></span></p>
                     </div>
                     <div class="add-cart">
-                        <h4><a href="@url">Add to Cart</a></h4>
+                        <h4><a href="/them-gio-hang?productID=@item.ID&quantity=1">Add to Cart</a></h4>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -93,7 +93,7 @@
                         </p>
                     </div>
                     <div class="add-cart">
-                        <h4><a href="@url">Add to Cart</a></h4>
+                        <h4><a href="/them-gio-hang?productID=@item.ID&quantity=1">Add to Cart</a></h4>
                     </div>
                     <div class="clear"></div>
                 </div>
