--- a/Dido_Store_2/Areas/Admin/Views/Order/Index.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Order/Index.cshtml
@@ -24,24 +24,7 @@
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
-
-                <div class="row">
-                    @using (Html.BeginForm("Index", "Order", FormMethod.Get))
-                    {
-                        <div class="form-group">
-                            <div class="col-md-2"></div>
-                            <div class="col-md-4 col-md-offset-4">
-                                <input type="text" name="searchString" placeholder="Nhập giá trị tìm kiếm" class="form-control" value="@ViewBag.searchString" />
-                            </div>
-                            <div class="col-md-2">
-                                <input type="submit" name="name" class="btn btn-info btn-block btn-outline" value="Tìm kiếm" />
-                            </div>
-                        </div>
-                    }
-
-                </div>
                 <p></p>
-
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
@@ -66,10 +49,10 @@
                                     <td>@item.ShipEmail</td>
                                     <td>@(item.CreatedDate != null ? item.CreatedDate.Value.ToString("dd/MM/yyyy") : "")</td>
                                     <td>
-                                        <a href="#" data-id="@item.ID" class="btn-active">@(item.Status == true ? "Rồi" : "Chưa")</a>
+                                        @(item.Status == true ? "Rồi" : "Chưa")
                                     </td>
                                     <td>
-                                        <a href="/Admin/Order/Detail/@item.ID">Chi tiết</a>/
+                                        <a href="/Admin/OrderDetail/Index/@item.ID">Chi tiết</a>
                                     </td>
                                 </tr>
                             }
