--- a/Dido_Store_2/Views/Product/Detail.cshtml
+++ b/Dido_Store_2/Views/Product/Detail.cshtml
@@ -39,7 +39,7 @@
                     <h2 class="font-weight-bold">@Model.Name</h2>
                     <p>@Model.Description</p>
                     <div class="price">
-                        <p>Giá: <span>@(Model.Price.HasValue ? Model.Price.Value.ToString("N0") : "Liên hệ")<u>đ</u></span></p>
+                        <p>Giá: <span>@(Model.Price.HasValue ? Model.Price.Value.ToString("N0") : "Liên hệ")    </span></p>
                     </div>
                     <div class="share-desc">
                         <div class="share">
